<resources>
    <string name="app_name">FinalQuizApp</string>
    <string name="yourapp">Your Stats</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="username">username</string>
    <string name="score">score</string>
    <string name="position">rank</string>
    <string name="rank">rankval</string>
    <string name="start">START</string>
    <string name="true2">TRUE</string>
    <string name="false2">FALSE</string>
    <string name="question">QUESTION</string>
    <string name="score2">SCORE</string>
    <string name="number_correct">NUMBER CORRECT</string>
    <string name="timer">TIMER</string>
    <string name="time">Time: %1$d</string>
</resources>
