<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD3F51B5"
    tools:context=".GamePlay">

    <Button
        android:id="@+id/buttontrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:background="#3CDD43"
        android:text="@string/true2"
        android:onClick="onTrueClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/buttonfalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:background="#FF0505"
        android:text="@string/false2"
        android:onClick="onFalseClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textquestion"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttimer" />

    <TextView
        android:id="@+id/textscore"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/score2"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#29F3F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttontrue" />

    <TextView
        android:id="@+id/textcorrect"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/number_correct"
        android:textAlignment="center"
        android:textColor="#29F3F0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textscore" />

    <TextView
        android:id="@+id/texttimer"
        android:layout_width="150dp"
        android:layout_height="82dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="#29F3F0"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
