<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CD3F51B5"
    tools:context=".Leaderboard">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textColor="#21F3F3"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/yourapp"
        android:textAlignment="center"
        android:textColor="#21F3F3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#ED1A1919"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#CB1A1919"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/rank"
        android:textAlignment="center"
        android:textColor="#D2111010"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/position"
        android:textAlignment="center"
        android:textColor="#DC1F1D1D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>